# cmake_test

./: CMakeLists.txt  Dockerfile  README.md
.circleci/: config.yml
src/mod2/: tool1.c
tests/: lib_check.txt
tool1/: CMakeLists.txt  src1.c
tool1/include/: header1.h
tool2/: Makefile  src1.c
tool2/include/: header1.h
